src/components/elements/styles.css
/** VIDEO PLAYER **/

#video-player {
    background-color: black;
    width: 100%;
    height: 100%; /* CodingArea is also 100% so VideoPlayer will take up as much height as CodingArea */
    position: relative;
}

#video-player > iframe {
    height: 100%;
    width: 80%;
}

#video-player > button {
    position: absolute;
    right: 0;
    width: 2.5rem;
    height: 2.5rem;
    background: transparent;
}

#video-player > button > svg {
    width: 1rem;
    color: var(--bg-contrast-secondary);
}

/** CODING AREA **/

#coding-area-wrapper {
    width: 100%;
    height: 100%;
    position: relative;
    border-radius: 10px;
}

#coding-area, #coding-area-color-layer {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 1rem 1.5rem;
    font-size: 1rem;
    font-family: inherit;
    resize: none;
    text-align: left;
    position: absolute;
    top: 0;
    left: 0;
    border-radius: inherit;
    overflow: auto;
}

#coding-area {
    background-color: transparent;  
    -webkit-text-fill-color: transparent; /* sets just the text color */
    z-index: 1;
}

#coding-area-color-layer {
    color: white;
}

#coding-area:not(:focus) ~ div[data-placeholder]:before {
    content: attr(data-placeholder);
    float: left;
    color: #b3b3b3;
    white-space: pre-wrap;
    text-align: left;
}

/** SWITCH **/

/*
Toggle switch <Start>
Ref: https://www.w3schools.com/howto/howto_css_switch.asp
*/

/* The switch - the box around the slider */
.switch-container {
    height: 34px;
}

.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
}

/* Hide default HTML checkbox */
.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

/* The slider */
.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: var(--grey);
    -webkit-transition: .4s;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
}

input:checked + .slider {
    background-color: var(--blue);
}

input:focus + .slider {
    box-shadow: 0 0 1px var(--blue);
}

input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
}

/* Toggle switch <End> */

